--- a/todo.txt
+++ b/todo.txt
@@ -32,3 +32,6 @@ or: use popovers for titles of buttons
 put image data in the url... somehow...
 display icon and name on top left of page
 preview radius size when dragging it
+
+
+draw lines mode?
