--- a/todo.txt
+++ b/todo.txt
@@ -1,20 +1,12 @@
 html todo:
 fix undo button
-work on mobile ui
-edit icon
 display preview of border
-split css, js into files
-
-
-
 
 js todo:
-  fix save image?
-
-  opacity?
-  info: what buttons do, settings, contact/share
-  custom color, color picker
-  virtual canvas
+fix save image?
+opacity?
+info: what buttons do, settings, contact/share
+custom color, color picker
 
 
 
@@ -32,6 +24,7 @@ or: use popovers for titles of buttons (or both)
 put image data in the url... somehow...
 preview radius size when dragging it
 
+enter color hex? color picker? pipet?
 
 draw lines mode?
 fix mobile
